force-app/main/objects/Invoice_Header_Unbuild_Escalation__mdt.object
<CustomObject>
    <description>USed to map the value of description , action and timing on basis of Esclation stage in invoice headers when the status is Awaiting PO</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Stage__c</fullName>
        <label>Escalation Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 0 - Not Due</fullName>
                    <default>true</default>
                    <label>Level 0 - Not Due</label>
                </value>
                <value>
                    <fullName>Level 1 - Release Invoice</fullName>
                </value>
                <value>
                    <fullName>Level 2 - No Response</fullName>
                </value>
                <value>
                    <fullName>Level 3 - OTC Team Lead</fullName>
                </value>
                <value>
                    <fullName>Level 4 - Head of OTC</fullName>
                </value>
                <value>
                    <fullName>Level 5 - Group FC</fullName>
                </value>
                <value>
                    <fullName>Level 6 - Business Senior</fullName>
                </value>
                <value>
                    <fullName>Level 7 - Leadership</fullName>
                </value>
                <value>
                    <fullName>Escalation Resolved</fullName>
                </value>
                <value>
                    <fullName>Level 1</fullName>
                    <isActive>false</isActive>
                    <label>Level 1</label>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                    <isActive>false</isActive>
                    <label>Level 2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timing__c</fullName>
        <label>Timing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Invoice Header Unbuild Escalation</label>
    <pluralLabel>Invoice Header Unbuild Escalations</pluralLabel>
</CustomObject>